--- a/Style.css
+++ b/Style.css
@@ -1,85 +1,125 @@
 body {
-  font-family: Arial, sans-serif;
   background-color: #e6f2eb;
   margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin-top: 70px;
-  margin-bottom: 70px;
+  position: relative;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* height: 100vh; */
+  /* margin-top: 70px; */
+  /* margin-bottom: 70px; */
 }
 
-h2{
+h2 {
   text-align: right;
   display: inline-block;
-  /* background-color: #004d33; */
+  margin: 0;
+  margin-top: 19px;
 }
 .container {
+  font-family: "Karla", system-ui;
+  font-size: 16px;
   background-color: #ffffff;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  width: 400px;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+  padding: 30px;
+  width: 500px;
+  position: absolute;
+  left: 400px;
+  /* top: 50px; */
+  text-align: left;
+  /* border: 2px solid black; */
+
+  /* display: inline-block; */
+}
+/* form{
+  border: 2px solid black;
+} */
+
+/* .form-group {
+  margin: 3px;
+} */
+.FLgrouped {
+  /* border: 2px solid black; */
+  width: 100%;
+
+  /* display: inline-block; */
+}
+.firstname {
+  display: inline-block;
+  width: 50%;
+  input {
+    width: 95%;
+    height: 40px;
+    border-radius: 5px;
+    border-style: outset;
+    margin-top: 10px;
+    border: 1px solid hsl(169, 82%, 27%);
+  }
 }
 
-.contact-form h2 {
-  text-align: center;
-  margin-bottom: 20px;
+.lastname {
+  display: inline-block;
+  input {
+    width: 135%;
+    margin-top: 10px;
+    border-radius: 5px;
+    height: 40px;
+    border: 1px solid hsl(169, 82%, 27%);
+  }
 }
 
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.form-group input,
-.form-group textarea {
-  width: calc(100% - 20px);
-  padding: 8px 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-}
-
-.form-group textarea {
-  resize: vertical;
+.grouped-email {
+  width: 100%;
+  /* border: 2px solid black; */
+  input {
+    margin-top: 10px;
+    width: 98%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid hsl(169, 82%, 27%);
+  }
 }
 
 .radio-group {
-  display: flex;
-  justify-content: space-between;
-}
-
-.radio-group input[type="radio"] {
-  margin-right: 5px;
-}
-
-.consent {
-  display: flex;
-  align-items: center;
-}
-
-.consent input {
-  margin-right: 10px;
-}
-
-button {
+  /* border: 2px solid black; */
   width: 100%;
-  background-color: #004d33;
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
+  .gen-enquiry {
+    /* padding-top: 10px; */
+    margin-top: 10px;
+    border-radius: 5px;
+    display: inline-block;
+    border: 1px solid hsl(169, 82%, 27%);
+    width: 48%;
+    height: 40px;
+  }
+  .support-request {
+    /* padding-top: 10px; */
+    margin-top: 10px;
+    width: 48.8%;
+    height: 40px;
+    border: 1px solid hsl(169, 82%, 27%);
+    display: inline-block;
+    margin-left: 4px;
+    border-radius: 5px;
+  }
 }
-
-button:hover {
-  background-color: #003a26;
+.form-group{
+  margin-top: 20px;
+  textarea{
+    margin-top: 10px;
+    width: 98%;
+    border-radius: 5px;
+    border: 1px solid  hsl(169, 82%, 27%);
+  }
+}
+button{
+  margin-top: 20px;
+  display: inline-block;
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  background-color: hsl(169, 82%, 27%);
 }
